[gd_scene load_steps=6 format=3 uid="uid://caxp46vei8bne"]

[ext_resource type="Texture2D" uid="uid://yerjahql4k5n" path="res://Sprites/Background.png" id="1_d1fyt"]
[ext_resource type="Script" path="res://Scripts/environment.gd" id="1_jir7d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bqs7v"]
size = Vector2(20, 481)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8oujv"]
size = Vector2(680.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1enp"]
size = Vector2(674, 20)

[node name="Environment" type="Node2D"]
script = ExtResource("1_jir7d")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_d1fyt")
centered = false

[node name="LeftWall" type="StaticBody2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(-10, 240.5)
shape = SubResource("RectangleShape2D_bqs7v")

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(661, -1)
collision_layer = 32
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(-10, 240.5)
shape = SubResource("RectangleShape2D_bqs7v")

[node name="TopWall" type="StaticBody2D" parent="."]
position = Vector2(623, -22)
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2(-301.25, 12)
shape = SubResource("RectangleShape2D_8oujv")

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2(7, 499)
collision_layer = 32
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(315, -8)
shape = SubResource("RectangleShape2D_l1enp")
debug_color = Color(0.660007, 0.511606, 0.154638, 0.42)

[node name="TimerReset" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="DeathZone" to="." method="_on_death_zone_body_entered"]
[connection signal="timeout" from="TimerReset" to="." method="_on_timer_reset_timeout"]
